Refactor domain models and mappers to use records, remove unused methods, and update identifier access logic